k8s_rules/deny_all_testsrv.yaml
# ---
# deny all testsrv netpolicy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-testsrv
  namespace: testsrv
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
