k8s_rules/deny_all_websrv.yaml
# ---
# deny all websrv netpolicy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-websrv
  namespace: websrv
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
