k8s_rules/dns_default.yaml
# ---
# DNS access rule
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dns-default
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
