k8s_rules/egress_pod-1-to-pod-2.yaml
# ---
# egress from pod-1 to pod-2
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egr-pod-1-to-pod-2
  namespace: default
spec:
  podSelector: 
    matchLabels:
      run: pod-1
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          run: pod-2


#    - namespaceSelector:
#        matchLabels:
#          wsrv: websrv
