k8s_rules/egress_pod-2-to-pod-4.yaml
# ---
# egress from pod-2 to pod-4
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egr-pod-2-to-pod-4
  namespace: default
spec:
  podSelector: 
    matchLabels:
      run: pod-2
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          wsrv: websrv
