k8s_rules/egress_pod-3-to-pod-4.yaml
# ---
# allow egress from pod-3 to pod-4
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-pod-3-to-pod-4
  namespace: testsrv
spec:
  podSelector:
    matchLabels:
      run: pod-3
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          wsrv: websrv
