k8s_rules/ingress-egress_pod-2-from-pod-1-to-pod-4.yaml
# ---
# pod2
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ing-eng-pod2-from-pod1-to-pod4
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: pod-2
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: pod-1
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          wsrv: websrv
