k8s_rules/ingress_pod-4-from-pod-2.yaml
# ---
# allo ingress from pod-2 to pod-4
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ing-pod-4-from-pod-2
  namespace: websrv
spec:
  podSelector:
    matchLabels:
      run: pod-4
#  policyTypes:
#  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          nsdef: default
